# tauri-cm5-poc

./: POC_ARCHITECTURE.md  POC_SCOPE.md  PROJECT_PLAN.md  README.md  RESEARCH_01_ARCHITECTURE.md  index.html  package-lock.json  package.json  vite.config.js
docs/: CM5_DEBIAN_TESTING.md  EXISTING_ASTERISK_USAGE.md  LOCAL_ONLY.md  OPERATOR_SIDE_POC.md  POC_OVERVIEW.md  PRM_CONTEXT.md  PRM_REUSE_VS_REWRITE.md
src/: App.jsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/operator/: OperatorPoc.jsx  OperatorPoc.tsx
