[package]
name = "tauri-cm5-poc"
version = "0.1.0"
description = "Minimal Tauri POC for WebRTC and QR scanning on Raspberry Pi CM5"
authors = ["Totem"]
edition = "2021"

[lib]
name = "tauri_cm5_poc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
